# astroquery-mcp

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  ads_tools.py  auth.py  config.py  errors.py  executor.py  http_client.py  introspection.py  main.py  pyproject.toml  retry.py  server.py
models/: __init__.py  results.py
test/: test_ads_auth.py  test_ads_compact.py  test_dynamic_coords_xmm.py  test_end_to_end.py  test_token_comparison.py
tools/: __init__.py  ads.py  discovery.py  gcn.py  heasarc.py  irsa.py  mast.py  nea.py  simbad.py  vo.py
utils/: __init__.py  async_utils.py  coord_utils.py  table_utils.py
